--- a/index.html
+++ b/index.html
@@ -153,60 +153,23 @@
         </div>
 
         <div class="col-lg-3 centered">
-          <canvas id="html" height="130" width="130"></canvas>
-          <p>HTML/CSS</p>
-          <br>
-          <script>
-          var doughnutData = [
-            {
-              value: 75,
-              color:"#1abc9c"
-            },
-            {
-              value : 25,
-              color : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("html").getContext("2d")).Doughnut(doughnutData);
-          </script>
+          <img src="img/html.png" alt="logo HTML" id="logohtml">
         </div>
 
         <div class="col-lg-3 centered">
-          <canvas id="javascript" height="130" width="130"></canvas>
-          <p>Javascript</p>
-          <br>
-          <script>
-          var doughnutData = [
-            {
-              value: 40,
-              color:"#1abc9c"
-            },
-            {
-              value : 60,
-              color : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("javascript").getContext("2d")).Doughnut(doughnutData);
-          </script>
+          <img src="img/css.png" alt="logo CSS" id="logocss">
         </div>
 
         <div class="col-lg-3 centered">
-          <canvas id="bootstrap" height="130" width="130"></canvas>
-          <p>Bootstrap</p>
-          <br>
-          <script>
-          var doughnutData = [
-            {
-              value: 25,
-              color:"#1abc9c"
-            },
-            {
-              value : 75,
-              color : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("bootstrap").getContext("2d")).Doughnut(doughnutData);
-          </script>
+          <img src="img/js.png" alt="logo JavaScript" id="logojs">
+        </div>
+
+        <div class="col-lg-3 col-lg-offset-3 centered">
+          <img src="img/bootstrap.png" alt="logo Bootstrap" id="logobootstrap">
+        </div>
+
+        <div class="col-lg-3 centered">
+          <img src="img/gimp.png" alt="logo GIMP" id="logogimp">
         </div>
 
       </div><!--/.row -->
