--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
               <li class="menu-item"><a class="smoothScroll" href="#skill" title="Compétences"><i class="icon-list-alt"></i></a></li>
               <li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
             </ul><!--/ uL#nav -->
-            <a href="indexeng.html" id="langue">English</a>
           </div><!-- /.dropdown -->
 
           <div class="clear"></div>
@@ -58,6 +57,7 @@
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
+      <div id="langue"><a href="indexeng.html">English</a></div>
       <div class="row centered">
         <div class="col-lg-12">
           <h1>William Verdu</h1>
@@ -152,23 +152,23 @@
           <h5>COMPETENCES</h5>
         </div>
 
-        <div class="col-lg-3 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
           <img src="img/html.png" alt="logo HTML" id="logohtml">
         </div>
 
-        <div class="col-lg-3 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
           <img src="img/css.png" alt="logo CSS" id="logocss">
         </div>
 
-        <div class="col-lg-3 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
           <img src="img/js.png" alt="logo JavaScript" id="logojs">
         </div>
 
-        <div class="col-lg-3 col-lg-offset-3 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
           <img src="img/bootstrap.png" alt="logo Bootstrap" id="logobootstrap">
         </div>
 
-        <div class="col-lg-3 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
           <img src="img/gimp.png" alt="logo GIMP" id="logogimp">
         </div>
 
