--- a/indexeng.html
+++ b/indexeng.html
@@ -44,7 +44,6 @@
               <li class="menu-item"><a class="smoothScroll" href="#skill" title="Compétences"><i class="icon-list-alt"></i></a></li>
               <li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
             </ul><!--/ uL#nav -->
-            <a href="index.html" id="langue">Français</a>
           </div><!-- /.dropdown -->
 
           <div class="clear"></div>
@@ -58,6 +57,7 @@
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
+      <div id="langue"><a href="index.html">Français</a></div>
       <div class="row centered">
         <div class="col-lg-12">
           <h1>William Verdu</h1>
