--- a/indexeng.html
+++ b/indexeng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +57,7 @@
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
-      <div id="langue"><a href="index.html">Français</a></div>
+      <div id="lang"><a href="index.html">Français</a></div>
       <div class="row centered">
         <div class="col-lg-12">
           <h1>William Verdu</h1>
@@ -152,24 +152,32 @@
           <h5>SKILLS</h5>
         </div>
 
-        <div class="col-lg-3 centered">
-          <img src="img/html.png" alt="logo HTML" id="logohtml">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/html.png" alt="logo HTML" class="logo">
         </div>
 
-        <div class="col-lg-3 centered">
-          <img src="img/css.png" alt="logo CSS" id="logocss">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/css.png" alt="logo CSS" class="logo">
         </div>
 
-        <div class="col-lg-3 centered">
-          <img src="img/js.png" alt="logo JavaScript" id="logojs">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/js.png" alt="logo JavaScript" class="logo">
         </div>
 
-        <div class="col-lg-3 col-lg-offset-3 centered">
-          <img src="img/bootstrap.png" alt="logo Bootstrap" id="logobootstrap">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
+          <img src="img/bootstrap.png" alt="logo Bootstrap" class="logo">
         </div>
 
-        <div class="col-lg-3 centered">
-          <img src="img/gimp.png" alt="logo GIMP" id="logogimp">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/php.png" alt="logo PHP" class="logo">
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/mysql.png" alt="logo MySQL" class="logo">
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
+          <img src="img/gimp.png" alt="logo GIMP" class="logo">
         </div>
 
       </div><!--/.row -->
