--- a/indexeng.html
+++ b/indexeng.html
@@ -57,7 +57,7 @@
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
-      <div id="lang"><a href="index.html">Français</a></div>
+      <div id="lang"><a href="index.html"><img src="img/france.jpg" alt="French flag" id="flag"></a></div>
       <div class="row centered">
         <div class="col-lg-12">
           <h1>William Verdu</h1>
