--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="home" name="home"></section>
   <div id="headerwrap">
     <div class="container">
-      <div id="lang"><a href="indexeng.html"><img src="img/uk.jpg" alt="drapeau UK" id="flag"></a></div>
+      <div id="lang"><a href="indexeng.html"><img src="img/uk.jpg" alt="drapeau UK" title="English version" id="flag"></a></div>
       <div class="row centered">
         <div class="col-lg-12">
           <h1>William Verdu</h1>
