--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/smoothscroll.js" type="text/javascript"></script>
-  <script src="js/Chart.js"></script>
+
+  <link  href="css/jquery.fancybox.min.css" rel="stylesheet">
+  <script src="js/jquery.fancybox.min.js"></script>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -42,6 +44,7 @@
               <li class="menu-item"><a class="smoothScroll" href="#about" title="A Propos"><i class="icon-user"></i></a></li>
               <li class="menu-item"><a class="smoothScroll" href="#resume" title="CV"><i class="icon-file"></i></a></li>
               <li class="menu-item"><a class="smoothScroll" href="#skill" title="Compétences"><i class="icon-list-alt"></i></a></li>
+              <li class="menu-item"><a class="smoothScroll" href="#portfolio" title="Portfolio"><i class="icon-book"></i></a></li>
               <li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
             </ul><!--/ uL#nav -->
           </div><!-- /.dropdown -->
@@ -186,6 +189,27 @@
   </div><!--/ #skillswrap -->
 
 
+  <!--PORTFOLIO-->
+  <section id="portfolio" name="portfolio"></section>
+  <div class="container desc">
+    <div class="row" id="portfoliocontain">
+      <div class="col-lg-2 col-lg-offset-1">
+        <h5>PORTFOLIO</h5>
+      </div>
+
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+        <a data-fancybox="gallery" href="img/portfolio1_lg.jpg">
+          <img src="img/portfolio1_sm.jpg" alt="Site Moizard Conseil" class="portfolioimg">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+        <a data-fancybox="gallery" href="img/portfolio2_lg.jpg">
+          <img src="img/portfolio2_sm.jpg" alt="Site Miam" class="portfolioimg">
+        </a>
+      </div>
+    </div>
+  </div>
+
 
   <section id="contact" name="contact"></section>
   <!--FOOTER DESCRIPTION -->
@@ -233,11 +257,6 @@
   </div><!--/ #footer -->
 
 
-
-
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
   <script src="assets/js/bootstrap.js"></script>
 </body>
 </html>
