--- a/index.html
+++ b/index.html
@@ -156,31 +156,35 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/html.png" alt="logo HTML" class="logo">
+          <img src="img/html.png" alt="logo HTML" class="logo" title="HTML">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/css.png" alt="logo CSS" class="logo">
+          <img src="img/css.png" alt="logo CSS" class="logo" title="CSS">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/js.png" alt="logo JavaScript" class="logo">
+          <img src="img/js.png" alt="logo JavaScript" class="logo" title="JavaScript">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
-          <img src="img/bootstrap.png" alt="logo Bootstrap" class="logo">
+          <img src="img/bootstrap.png" alt="logo Bootstrap" class="logo" title="Bootstrap">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/php.png" alt="logo PHP" class="logo">
+          <img src="img/mdl.png" alt="logo MDL" class="logo" title="Material Design Lite">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/mysql.png" alt="logo MySQL" class="logo">
+          <img src="img/mysql.png" alt="logo MySQL" class="logo" title="MySQL">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
-          <img src="img/gimp.png" alt="logo GIMP" class="logo">
+          <img src="img/ps.png" alt="logo Photoshop" class="logo" title="Photoshop">
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/gimp.png" alt="logo GIMP" class="logo" title="GIMP">
         </div>
 
       </div><!--/.row -->
@@ -197,12 +201,12 @@
         <h5>PORTFOLIO</h5>
       </div>
 
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 centered">
         <a data-fancybox="gallery" href="img/portfolio1_lg.jpg">
           <img src="img/portfolio1_sm.jpg" alt="Site Moizard Conseil" class="portfolioimg">
         </a>
       </div>
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 centered">
         <a data-fancybox="gallery" href="img/portfolio2_lg.jpg">
           <img src="img/portfolio2_sm.jpg" alt="Site Miam" class="portfolioimg">
         </a>
