--- a/indexeng.html
+++ b/indexeng.html
@@ -66,6 +66,7 @@
           <h1>William Verdu</h1>
           <h3>Web Developer | verduwilliam@gmail.com</h3>
           <h5><a href="https://github.com/verduwilliam" target="_blank"><i class="icon-github-sign"></i>My GitHub</a></h5>
+          <h5><a href="https://www.linkedin.com/in/william-verdu-239388140/" target="_blank"><i class="icon-linkedin-sign"></i>My Linkedin</a></h5>
         </div><!--/.col-lg-12 -->
       </div><!--/.row -->
     </div><!--/.container -->
