--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <link href="css/font-awesome.min.css" rel="stylesheet">
 
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/smoothscroll.js" type="text/javascript"></script>
