--- a/indexeng.html
+++ b/indexeng.html
@@ -12,18 +12,19 @@
   <link href="css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/main.css" rel="stylesheet">
 
   <link href="css/font-awesome.min.css" rel="stylesheet">
 
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/smoothscroll.js" type="text/javascript"></script>
 
   <link  href="css/jquery.fancybox.min.css" rel="stylesheet">
   <script src="js/jquery.fancybox.min.js"></script>
+
+  <link href="css/main.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
