--- a/index.html
+++ b/index.html
@@ -240,23 +240,7 @@
           </p>
         </div>
         <div class="col-lg-5">
-          <p><sm>CONTACT DIRECT</sm></p>
-          <form action="mailto:verduwilliam@gmail.com" method="post">
-            <fieldset>
-              <legend>coordonnées</legend>
-              <input type="text" name="nom" class="txtcontact" placeholder="Nom" required>
-              <input type="text" name="prenom" class="txtcontact" placeholder="Prénom" required>
-              <input type="email" name="mail" class="txtcontact" placeholder="Adresse mail" required>
-              <input type="tel" name="phone" class="txtcontact" placeholder="Numéro de téléphone">
-            </fieldset>
-            <fieldset>
-              <legend>Raisons de me contacter</legend>
-              <textarea name="raisons" class="txtcontact"></textarea>
-            </fieldset>
-            <input type="submit" value="Envoyer" class="buttons">
-            <input type="reset" value="Effacer" class="buttons">
-          </form>
-
+          <button onclick="location.href='mailto:mailto:verduwilliam@gmail.com'">Me Contacter</button>
         </div>
       </div><!--/.row -->
     </div><!--/.container -->
