--- a/indexeng.html
+++ b/indexeng.html
@@ -239,23 +239,7 @@
           </p>
         </div>
         <div class="col-lg-5">
-          <p><sm>CONTACT ME DIRECTLY</sm></p>
-          <form action="mailto:verduwilliam@gmail.com" method="post">
-            <fieldset>
-              <legend>Contact Informations</legend>
-              <input type="text" name="nom" class="txtcontact" placeholder="Surname" required>
-              <input type="text" name="prenom" class="txtcontact" placeholder="First name" required>
-              <input type="email" name="mail" class="txtcontact" placeholder="E-mail" required>
-              <input type="tel" name="phone" class="txtcontact" placeholder="Phone number">
-            </fieldset>
-            <fieldset>
-              <legend>Raisons To Contact Me</legend>
-              <textarea name="raisons" class="txtcontact"></textarea>
-            </fieldset>
-            <input type="submit" value="Send" class="buttons">
-            <input type="reset" value="Clear" class="buttons">
-          </form>
-
+          <button onclick="location.href='mailto:mailto:verduwilliam@gmail.com'">Contact me</button>
         </div>
       </div><!--/.row -->
     </div><!--/.container -->
