--- a/indexeng.html
+++ b/indexeng.html
@@ -182,10 +182,18 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
-          <img src="img/ps.png" alt="logo Photoshop" class="logo" title="Photoshop">
+          <img src="img/php.png" alt="logo PHP" class="logo" title="PHP">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/ionic.png" alt="logo Ionic" class="logo" title="Ionic">
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
+          <img src="img/ps.png" alt="logo Photoshop" class="logo" title="Photoshop">
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
           <img src="img/gimp.png" alt="logo GIMP" class="logo" title="GIMP">
         </div>
 
