--- a/indexeng.html
+++ b/indexeng.html
@@ -109,9 +109,7 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <p><sm>FINISHED IN JULY 2017</sm><br/>
-          <imp><sm>IN PROGRESS</sm></imp>
-        </p>
+        <p><sm>FINISHED IN JULY 2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Baccalauréat S option SI</t><br/>
@@ -128,12 +126,12 @@
         <h5>PROFESSIONNAL EXPERIENCE</h5>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
-        <p><t>Restaurant Crew</t><br/>
-          McDonald's<br/>
+        <p><t>Web Developer</t><br/>
+          Ecklipse<br/>
         </p>
       </div>
       <div class="col-lg-3">
-        <p><sm>2015 - 2016</sm></p>
+        <p><sm>2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Waiter</t><br/>
@@ -142,6 +140,14 @@
       </div>
       <div class="col-lg-3">
         <p><sm>2016</sm></p>
+      </div>
+      <div class="col-lg-6 col-lg-offset-3">
+        <p><t>Restaurant Crew</t><br/>
+          McDonald's<br/>
+        </p>
+      </div>
+      <div class="col-lg-3">
+        <p><sm>2015 - 2016</sm></p>
       </div>
 
     </div><!--/.row -->
