--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
         </p>
       </div>
       <div class="col-lg-3">
-        <p><sm>FINI EN JUILLET 2017</sm><br/>
-          <imp><sm>EN COURS</sm></imp>
-        </p>
+        <p><sm>FINI EN JUILLET 2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Baccalauréat S option SI</t><br/>
@@ -126,6 +124,14 @@
 
       <div class="col-lg-3 col-lg-offset-1">
         <h5>EXPERIENCE PROFESSIONNELLE</h5>
+      </div>
+      <div class="col-lg-6 col-lg-offset-3">
+        <p><t>Développeur Web</t><br/>
+          Ecklipse<br/>
+        </p>
+      </div>
+      <div class="col-lg-3">
+        <p><sm>2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Equipier polyvalent</t><br/>
