--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
       </div>
       <div class="col-lg-6">
         <p><t>Développeur Web</t><br/>
-          PopSchool Valenciennes <br/>
-          <i>Formation de 6 mois</i>
+          PopSchool Valenciennes
         </p>
       </div>
       <div class="col-lg-3">
-        <p><sm>FINI EN JUILLET 2017</sm></p>
+        <p><sm>2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Baccalauréat S option SI</t><br/>
