--- a/indexeng.html
+++ b/indexeng.html
@@ -104,12 +104,11 @@
       </div>
       <div class="col-lg-6">
         <p><t>Web Developer</t><br/>
-          PopSchool Valenciennes <br/>
-          <i>6 months formation</i>
+          PopSchool Valenciennes
         </p>
       </div>
       <div class="col-lg-3">
-        <p><sm>FINISHED IN JULY 2017</sm></p>
+        <p><sm>2017</sm></p>
       </div>
       <div class="col-lg-6 col-lg-offset-3">
         <p><t>Baccalauréat S option SI</t><br/>
