--- a/indexeng.html
+++ b/indexeng.html
@@ -191,15 +191,15 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/ionic.png" alt="logo Ionic" class="logo" title="Ionic">
+          <img src="img/nodejs.png" alt="logo Ionic" class="logo" title="nodeJS">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/ps.png" alt="logo Photoshop" class="logo" title="Photoshop">
+          <img src="img/ionic.png" alt="logo Ionic" class="logo" title="Ionic">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-lg-offset-3 centered">
-          <img src="img/gimp.png" alt="logo GIMP" class="logo" title="GIMP">
+          <img src="img/ps.png" alt="logo Photoshop" class="logo" title="Photoshop">
         </div>
 
       </div><!--/.row -->
