--- a/indexeng.html
+++ b/indexeng.html
@@ -191,7 +191,7 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
-          <img src="img/nodejs.png" alt="logo Ionic" class="logo" title="nodeJS">
+          <img src="img/nodejs.png" alt="logo nodeJS" class="logo" title="nodeJS">
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 centered">
